--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,3 +23,12 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+nav {
+  font-family: 'Bungee', sans-serif;
+  color: black;
+}
