--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,3 +27,14 @@ body {
 body {
   font-family: 'Source Sans Pro', sans-serif;
 }
+
+main {
+  background-color: #f4f1ec;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+
+}
