Added code to make counter turn red after 140 characters

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -13,6 +13,15 @@
   font-family: 'Bungee';
 }
 
+.red {
+  color: red;
+}
+
+.gray {
+  color: #545149;
+}
+
+
 button {
   color: white;
   background-color: #4056A1;
