Fixed navbar to top of page

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,6 @@
 .main-header {
   height: 400px;
+  padding-top: 40px;
   width: auto;
   display: flex;
   flex-direction: column;
@@ -9,3 +10,4 @@
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
 
 }
+
