--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,6 +8,9 @@ nav {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+
 }
 
 span {
@@ -15,4 +18,6 @@ span {
   color: white;
 }
 
-
+body {
+  margin-top: 120px;
+}
