--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -31,5 +31,19 @@ button {
   background-color: transparent;
   resize: none;
   outline: none;
+}
 
+.error {
+  display: none;
+  border-color: red;
+  background-color: #fce4e4;
+  border: 3px solid red;
+  padding: 20px 30px;
+  color: red;
+  margin-top: 5px;
+}
+
+h2 {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
