--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -16,6 +16,7 @@ nav {
 nav span {
   font-family: 'Bungee', sans-serif;
   color: white;
+  font-size: larger;
 }
 
 body {
@@ -30,6 +31,7 @@ nav div {
 
 nav p {
   margin: 0;
+  font-size: smaller;
 }
 nav i {
   color: red;
