--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -38,6 +38,7 @@ nav i {
 }
 
 .compose {
+  background-color: transparent;
   border: none;
   outline: none;
   padding-top: 5px;
@@ -49,4 +50,14 @@ nav i {
 
 .compose:hover {
     top: 10px;
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+
+  nav {
+    background-color: #00d4db;
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+  }
+
 }
