--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -39,10 +39,24 @@ main {
 
 }
 
+#scroll-up {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 15px;
+  border-radius: 50%;
+  background-color: mediumpurple;
+
+}
+
 /* Desktop Styles */
 @media only screen and (min-width: 1024px) {
   main {
     margin-left: 6em;
     margin-right: 2em
   }
+}
+
+#scroll-up:hover {
+  cursor: pointer;
 }
