--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -46,7 +46,17 @@ main {
   right: 15px;
   border-radius: 50%;
   background-color: mediumpurple;
+  width: 75px;
+  height: 75px;
+  border: none;
+  outline: none;
+  transition: bottom ease 0.5s;
 
+}
+
+#scroll-up:hover {
+  cursor: pointer;
+  bottom: 35px;
 }
 
 /* Desktop Styles */
@@ -55,8 +65,4 @@ main {
     margin-left: 6em;
     margin-right: 2em
   }
-}
-
-#scroll-up:hover {
-  cursor: pointer;
 }
